<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yonisade.warehouse.HomeActivity"
    android:background="@color/yoniBackGroundColor">


    <Button
        android:id="@+id/AddToInventory"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:layout_marginTop="105dp"
        android:onClick="AddInventoryButtonClicked"
        android:text="@string/add_item_button"
        />

    <Button
        android:id="@+id/Inventory"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:background="@drawable/buttonshape"
        android:onClick="InventoryButtonClicked"
        android:text="@string/Inventory_button"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:layout_below="@+id/AddToInventory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/HomeImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/Inventory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/home_screen"
        android:contentDescription="@string/imageDescription"
        />
</RelativeLayout>
